<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/background1"
    android:gravity="center">
    <TextView
        android:id="@+id/about_me_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_me_text"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginBottom="19dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/bordered_box"
        android:padding="16dp">

        <TextView
            android:id="@+id/info_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/info_text"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:gravity="center"/>

        <TextView
            android:id="@+id/additional_info_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/additional_info_text"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:gravity="center"/>
    </LinearLayout>

</LinearLayout>
